// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGIcon should render correctly when the use title, desc, use, and aria-labelledby props are provided 1`] = `
<svg
  aria-labelledby="custom-icon-title"
  class="rmd-icon rmd-icon--svg"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title
    id="custom-icon-title"
  >
    Custom Icon
  </title>
  <use
    href="/sprites#custom-icon"
  />
</svg>
`;

exports[`SVGIcon should render correctly when the use title, desc, use, and aria-labelledby props are provided 2`] = `
<svg
  aria-labelledby="custom-icon-title custom-icon-desc"
  class="rmd-icon rmd-icon--svg"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title
    id="custom-icon-title"
  >
    Custom Icon
  </title>
  <use
    href="/sprites#custom-icon"
  />
</svg>
`;

exports[`SVGIcon should render correctly when the use title, desc, use, and aria-labelledby props are provided 3`] = `
<svg
  class="rmd-icon rmd-icon--svg"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Custom Icon
  </title>
</svg>
`;

exports[`SVGIcon should render correctly when the use title, desc, use, and aria-labelledby props are provided 4`] = `
<svg
  aria-labelledby="custom-icon-title"
  class="rmd-icon rmd-icon--svg"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`SVGIcon should render correctly when the use title, desc, use, and aria-labelledby props are provided 5`] = `
<svg
  aria-labelledby="custom-icon-title custom-item-desc"
  class="rmd-icon rmd-icon--svg"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`SVGIcon should render correctly with the dense prop 1`] = `
<svg
  aria-hidden="true"
  className="rmd-icon rmd-icon--svg rmd-icon--dense"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
  />
</svg>
`;

exports[`SVGIcon should use render correctly with a <path> child 1`] = `
<svg
  aria-hidden="true"
  className="rmd-icon rmd-icon--svg"
  focusable="false"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
  />
  ;
</svg>
`;
